--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
         </a>
       </div>
     </div>
+    <div style="text-align: center">
+      <a href="https://github.com/zxy19/cjlu-order-qr" target="_blank" rel="noopener"> Github </a>
+    </div>
     <script src="./qrcode.min.js"></script>
     <script>
       const container = document.querySelector(".container");
