--- a/index.html
+++ b/index.html
@@ -7,9 +7,16 @@
   </head>
   <body>
     <style>
+      html,
+      body {
+        margin: 0;
+        height: 100%;
+      }
       body {
         display: flex;
-        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
       }
       .container {
         max-width: 1200px;
@@ -92,7 +99,13 @@
       </div>
     </div>
     <div style="text-align: center">
-      <a href="https://github.com/zxy19/cjlu-order-qr" target="_blank" rel="noopener"> Github </a>
+      <a
+        href="https://github.com/zxy19/cjlu-order-qr"
+        target="_blank"
+        rel="noopener"
+      >
+        Github
+      </a>
     </div>
     <script src="./qrcode.min.js"></script>
     <script>
